--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.19.0",
     "flowbite": "^4.0.1",
+    "leaflet": "^1.9.4",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-leaflet": "^5.0.0",
     "use-debounce": "^10.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
